removed issue with nav bar on smaller devices

--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@
     font-size: 16px;
     color: #000000;
     text-align: center;
-    padding: 15px 19px;
+    padding: 15px 20px;
     text-decoration: none;
   }
 
@@ -66,7 +66,7 @@
     border: none;
     outline: none;
     color: #000000;
-    padding: 15px 31.3px;
+    padding: 15px 25px;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
